<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MMSKeeper</string>
    <string name="dataOnLabel">"TYPE when data is on (e.g. &quot;default,supl,admin,dun,mms&quot;):"</string>
    <string name="dataOffLabel">"TYPE when data is off (e.g. &quot;mms&quot;):"</string>
    <string name="dataOnType">default,supl,admin,dun,mms</string>
    <string name="dataOffType">mms</string>
    <string name="currentType">"Current APN TYPE is: "</string>
    <string name="initType">"When this app was first started, APN TYPE was: "</string>
    <string name="buttonSave">Save</string>
    <string name="buttonDiscard">Discard</string>
    <string name="buttonReset">Reset</string>
    <string name="widgetImageContentDescription">Widget Image</string>
    <string name="toggleImageContentDescription">Main Activity Toggle Image</string>
    <string name="infoBox">"This app enables and disables data by changing the TYPE of the current APN (Access Point Name). You have to keep &quot;Mobile Data&quot; turned on the be able to send/receive multimedia messages (MMS). Tap on the icon on the right or use the widget to toggle."</string>
    <string name="permissionError">Error: on Android 4.0 and above, MMS Keeper needs to be converted to a system app. Root your device, then use /system/app mover or similar.</string>
    
</resources>
