<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/infoBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_toLeftOf="@+id/settingsImage"
            android:text="@string/infoBox" />

        <ImageButton
            android:id="@+id/settingsImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/settingsImageContentDescription"
            android:onClick="toggleTap"
            android:src="@drawable/ic_data_on" />
    </RelativeLayout>

    <TextView
        android:id="@+id/initType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/initType" />

    <TextView
        android:id="@+id/currentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/currentType" />

    <TextView
        android:id="@+id/dataOnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/dataOnLabel" />

    <EditText
        android:id="@+id/editDataOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:hint=""
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/dataOffLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/dataOffLabel" />

    <EditText
        android:id="@+id/editDataOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:hint=""
        android:inputType="textNoSuggestions" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".Settings" >

        <Button
            android:id="@+id/buttonSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:onClick="saveTypes"
            android:text="@string/buttonSave" />

        <Button
            android:id="@+id/buttonDiscard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:onClick="discardTypes"
            android:text="@string/buttonDiscard" />

        <Button
            android:id="@+id/buttonReset"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:onClick="resetTypes"
            android:text="@string/buttonReset" />
    </LinearLayout>

</LinearLayout>